Closed Bug 398369 Opened 18 years ago Closed 18 years ago

Break friendship between imgContainer and nsGIFDecoder2

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
trivial

Tracking

()

VERIFIED FIXED
mozilla1.9beta1

People

(Reporter: alfredkayser, Assigned: alfredkayser)

Details

Attachments

(1 file)

in imgContainer.h there is a 'friend nsGIFDecoder2' which is no longer necessary. Likewise, nsGIFDecoder2 doesn't need to include imgContainer.h anymore.
Attachment #283319 - Flags: review?(pavlov)
Attachment #283319 - Flags: superreview+
Attachment #283319 - Flags: review?(pavlov)
Attachment #283319 - Flags: review+
Attachment #283319 - Flags: approval1.9+
Keywords: checkin-needed
Assignee: nobody → alfredkayser
Checking in modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp; /cvsroot/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp,v <-- nsGIFDecoder2.cpp new revision: 1.84; previous revision: 1.83 done Checking in modules/libpr0n/src/imgContainer.h; /cvsroot/mozilla/modules/libpr0n/src/imgContainer.h,v <-- imgContainer.h new revision: 1.27; previous revision: 1.26 done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M9
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: