Bug 398369 - "Break friendship between imgContainer and nsGIFDecoder2" [p=alfredkayser@nl.ibm.com (Alfred Kayser) r+sr+a1.9=stuart]